# kraftfahrzeug

./: .gitignore  Cargo.toml  README.md
examples/: abstract_object.rs
src/: abstract_object.rs  lib.rs  main.rs  utils.rs
src/message/: abbreviate.rs  from_json.rs  mod.rs  view.rs
src/views/: connect.rs  debug.rs  message_inspect.rs  messages.rs  mod.rs  titlebar.rs  toolbar.rs
