[package]
name = "kraftfahrzeug"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0"
log = "0"
serde_json = "1"
uuid = { version = "0", features = ["v4"] }
