[package]
name = "kraftfahrzeug"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = "0.4.5"
cursive = "0"
cursive-multiplex = "0.2.1"
flexi_logger = { version = "0.14.1", features = ["specfile"] }
log = "0"
serde_json = "1"
uuid = { version = "0", features = ["v4"] }
xdg = "2.2.0"
lazy_static = "1.3.0"

[patch.crates-io]
flexi_logger = { git = 'https://github.com/emabee/flexi_logger.git', branch = "add_default_writer" }
