[package]
name = "kraftfahrzeug"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
description = "A serialization agnostic debugger and inspector for websocket transports"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["websocket", "inspect", "debug", "repl"]
repository = "https://github.com/verkehrsministerium/kraftfahrzeug"
documentation = "https://verkehrsministerium.github.io/kraftfahrzeug/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = "0.4.5"
cursive = "0.13.0"
cursive-multiplex = "0.2.10"
flexi_logger = { version = "0.14.3", features = ["specfile"] }
log = "0.4.8"
serde_json = "1.0.40"
uuid = { version = "0.7.4", features = ["v4"] }
xdg = "2.2.0"
lazy_static = "1.4.0"
cursive-tabs = "0.2.1"
cursive-async-view = "0.1.3"
cursive-flexi-logger-view = "0.1.1"
cursive-aligned-view = "0.1.3"

[badges]
travis-ci = { repository = "deinstapel/cursive-multiplex" }
